Fix up the pages with new variables to making heading look better and have there own pictures.  Add pictures for the other pages.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 ---
-layout: home
+layout: main
+background: family.jpg
+background_text_line1: >
+  Life is all about the mixture of Family, Friends,<br/>
+  Experiences, and Solving Problems
+background_text_line2: >
+  Here is a peek into my life.
 ---
 <div class="home">
 
