Fix linkedin link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ background_text_line2: >
         graduating with Magna Cum Laude honors and a Bachelor's of Science in Computer Science.
       </p>
       <p>
-        Connect with me at Linked in to learn more about my professional career and see if I am your Solutions Engineer.
+        Connect with me at
+        <a href="https://linkedin.com/in/{{ site.linkedin_username }}">Linked</a>
+        in to learn more about my professional career and see if I am your Solutions Engineer.
       </p>
     </div>
   </div>
