Fix linkedin link

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ background_text_line2: >
       </p>
       <p>
         Connect with me at
-        <a href="https://linkedin.com/in/{{ site.linkedin_username }}">Linked</a>
-        in to learn more about my professional career and see if I am your Solutions Engineer.
+        <a href="https://linkedin.com/in/{{ site.linkedin_username }}">LinkedIn</a>
+        to learn more about my professional career and see if I am your Solutions Engineer.
       </p>
     </div>
   </div>
