Have links open in new tabs

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ background_text_line2: >
       </p>
       <p>
         Connect with me at
-        <a href="https://linkedin.com/in/{{ site.linkedin_username }}">LinkedIn</a>
+        <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank">LinkedIn</a>
         to learn more about my professional career and see if I am your Solutions Engineer.
       </p>
     </div>
