--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ background_text_line2: >
   <div class="row">
     <div class="col-md-5">
       <img src="{{ "/img/family2.jpg" |  prepend: site.baseurl }}" title="My life" class="thumbnail col-md-12" />
+      <img src="{{ "/img/family3.jpg" |  prepend: site.baseurl }}" title="My life" class="thumbnail col-md-12" />
     </div>
     <div class="col-md-6">
       <p>
