Fix up the picture situation on the about page.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@ background_text_line2: >
     </div>
   </div>
   <div class="row">
-    <div class="col-md-5">
-      <img src="{{ "/img/family2.jpg" |  prepend: site.baseurl }}" title="My life" class="thumbnail col-md-12" />
-      <img src="{{ "/img/family3.jpg" |  prepend: site.baseurl }}" title="My life" class="thumbnail col-md-12" />
-    </div>
     <div class="col-md-6">
       <p>
         Who am I?  Well in my personal time I am a father, husband and friend.
@@ -34,6 +30,16 @@ background_text_line2: >
         sports I love hanging out with my friends whether it be at the bar or just hanging
         out joking around.
       </p>
+    </div>
+    <div class="col-md-5">
+      <img src="{{ "/img/family2.jpg" |  prepend: site.baseurl }}" title="My life" class="thumbnail col-md-12 col-xs-12" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-5">
+      <img src="{{ "/img/family3.jpg" |  prepend: site.baseurl }}" title="My life" class="thumbnail col-md-12 col-xs-12" />
+    </div>
+    <div class="col-md-6">
       <p>
         I am a software developer by trade having done so professionally for over seven
         years and having dabbled in development for around 10 years.  I love to build software
