--- a/portfolio.html
+++ b/portfolio.html
@@ -20,15 +20,56 @@ permalink: /portfolio/
     </div>
   </div>
   <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-8">
+      <img src="{{ "/img/monitor.png" |  prepend: site.baseurl }}" title="ShuluIt" class="col-md-12 col-xs-12" />
     </div>
-    <div class="col-md-6">
+    <div class="container-fluid app col-md-4">
+      <div class="row logo">
+        Shulu<b>It</b>
+      </div>
+      <div class="row">
+        <p>
+          A task management system that allows you to collaborate on projects with others all
+          while saved at a location you can access anywhere anytime.  Although full featured
+          and usable this is just a demo application to show my skillset
+        </p>
+        <p>
+          <b>Built With</b>
+          <ul>
+            <li>Ruby on Rails</li>
+            <li>AngularJS</li>
+            <li>HTML5, JQuery UI, and Twitter Bootstrap</li>
+          </ul>
+        </p>
+      </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-8">
+      <img src="{{ "/img/monitor.png" |  prepend: site.baseurl }}" title="Diabit" class="col-md-12 col-xs-12" />
     </div>
-    <div class="col-md-6">
+    <div class="container-fluid app col-md-4">
+      <div class="row logo">
+        <img src="{{ "/img/diabit-logo.png" |  prepend: site.baseurl }}" title="ShuluIt" class="col-md-12 col-xs-12" />
+      </div>
+      <div class="row">
+        <p>
+          This was a project where I was approached by some graduates students in Xavier Universities
+          master program.  The idea was to create a Diabities prototype application similar to that FitBit.
+        </p>
+        <p>
+          <b>Built With</b>
+          <ul>
+            <li>Ruby on Rails</li>
+            <li>Highcharts</li>
+            <li>HTML5, JQuery UI, and Twitter Bootstrap</li>
+            <li>Logo made by
+              <a href="http://nicholekocher.com" target="_blank">Nichole Kocher</a>
+              a Graphic Designer out of Indianapolis, IN
+            </li>
+          </ul>
+        </p>
+      </div>
     </div>
   </div>
 </div>
