Fix websites url

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@ permalink: /portfolio/
             <li>AngularJS</li>
             <li>HTML5, JQuery UI, and Twitter Bootstrap</li>
           </ul>
-          <a href="http://shuluit.herokuapps.com" class="btn btn-info" target="_blank">View Site</a>
+          <a href="http://shuluit.herokuapp.com" class="btn btn-info" target="_blank">View Site</a>
         </p>
       </div>
     </div>
@@ -69,7 +69,7 @@ permalink: /portfolio/
               a Graphic Designer out of Indianapolis, IN
             </li>
           </ul>
-          <a href="http://diabit.herokuapps.com" class="btn btn-info" target="_blank">View Site</a>
+          <a href="http://diabit.herokuapp.com" class="btn btn-info" target="_blank">View Site</a>
         </p>
       </div>
     </div>
