Add transperacy to png

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@ permalink: /portfolio/
   </div>
   <div class="row">
     <div class="col-md-8">
-      <img src="{{ "/img/shuluit-monitor.jpg" |  prepend: site.baseurl }}" title="ShuluIt" class="col-md-12 col-xs-12" />
+      <img src="{{ "/img/shuluit-monitor.png" |  prepend: site.baseurl }}" title="ShuluIt" class="col-md-12 col-xs-12" />
     </div>
     <div class="container-fluid app col-md-4">
       <div class="row logo">
@@ -47,7 +47,7 @@ permalink: /portfolio/
   </div>
   <div class="row">
     <div class="col-md-8">
-      <img src="{{ "/img/diabit-monitor.jpg" |  prepend: site.baseurl }}" title="Diabit" class="col-md-12 col-xs-12" />
+      <img src="{{ "/img/diabit-monitor.png" |  prepend: site.baseurl }}" title="Diabit" class="col-md-12 col-xs-12" />
     </div>
     <div class="container-fluid app col-md-4">
       <div class="row logo">
