Add eveything but the form itself to the contact page.

--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,24 @@ permalink: /contact/
   </div>
   <div class="contact row">
     <div class="info col-md-4">
+      <p class="title">
+        <b>Dustin Kocher</b><br/><br/>
+        Solutions Engineer
+      </p>
+      <p>Cold Spring, KY 41076</p>
+      <p>
+        dtkocher@hotmail.com<br/>
+        (859) 429-2947
+      </p>
     </div>
-    <div class="container-fluid col-md-8">
+    <div class="message container-fluid col-md-7 col-md-offset-1">
+      <div class="row">
+        <p class="title">
+          Send me a message
+        </p>
+      </div>
+      <div class="row">
+      </div>
     </div>
   </div>
 </div>
