--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,11 @@ permalink: /contact/
         </p>
       </div>
       <div class="row">
-        <!--
         <form accept-charset="UTF-8" action="https://formkeep.com/f/4d2385cac181" method="POST">
-        -->
-        <form accept-charset="UTF-8" action="#" method="POST">
           <input type="hidden" name="utf8" value="✓">
           <input type="text" name="name" placeholder="Name" required>
-          <input type="email" name="email" placeholder="Email" required>
+          <input type="email" name="email" placeholder="Email" required
+            pattern="(?:[a-z0-9!#$%&’*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&’*+/=?^_`{|}~-]+)*|”(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*”)@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])">
           <input type="tel" name="telephone" placeholder="Telephone" pattern="\(?(\+?\d[- ( ) .]*){7,13}">
           <input type="text" name="subject" placeholder="Subject" required>
           <input type="text" name="budget" placeholder="Project Budget">
