Add success message for contact form

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,12 @@ permalink: /contact/
       </p>
     </div>
     <div class="message container-fluid col-md-6 col-md-offset-1">
+      <section id="contactme" >
+      <div class="row success">
+        <h4>
+          Your email has been successfully sent.  I will get back to you in a timely manner.
+        </h4>
+      </div>
       <div class="row">
         <p class="title">
           Send me a message
@@ -51,6 +57,7 @@ permalink: /contact/
           <input type="submit" value="Send" class="small btn btn-primary">
         </form>
       </div>
+      </section>
     </div>
   </div>
 </div>
