Add blog main page

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,10 @@
 ---
-layout: page
+layout: main
 title: Blog
+background: blogging.jpg
+background_text_line1: >
+  This is my attempt to share what I learn.</br>
+  I write you hopefully find it helpful it's Blogging
 permalink: /blog/
 ---
 
