Intial blog page commit

--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,15 @@ background_text_line1: >
 permalink: /blog/
 ---
 
-This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](http://jekyllrb.com/)
-
-You can find the source code for the Jekyll new theme at: [github.com/jglovier/jekyll-new](https://github.com/jglovier/jekyll-new)
-
-You can find the source code for Jekyll at [github.com/jekyll/jekyll](https://github.com/jekyll/jekyll)
+<div class="container-fluid">
+  <div class="row lead">
+    <div class="col-md-8 title">
+      Its a Blog
+      <div class="description">
+        here are some things I have learned through my life experiences as a Solutions Engineer.
+      </div>
+    </div>
+  </div>
+  <div class="row">
+  </div>
+</div>
