Abstract some content into a partial.

--- a/blog.html
+++ b/blog.html
@@ -6,17 +6,7 @@ background_text_line1: >
   This is my attempt to share what I learn.</br>
   I write you hopefully find it helpful it's Blogging
 permalink: /blog/
+body_title: Its a Blog
+body_description: >
+  Here are some things I have learned through my life experiences as a Solutions Engineer.
 ---
-
-<div class="container-fluid">
-  <div class="row lead">
-    <div class="col-md-8 title">
-      Its a Blog
-      <div class="description">
-        here are some things I have learned through my life experiences as a Solutions Engineer.
-      </div>
-    </div>
-  </div>
-  <div class="row">
-  </div>
-</div>
