--- a/contact.html
+++ b/contact.html
@@ -8,17 +8,12 @@ background_text_line1: >
 background_text_margin_top: 25%
 background_text_margin_left: 20%
 permalink: /contact/
+body_title: Contact
+body_description: >
+  Tell Me Your Vision and I'll Build Your Solution
 ---
 
 <div class="container-fluid">
-  <div class="row lead">
-    <div class="col-md-8 title">
-      Contact
-      <div class="description">
-        Tell Me Your Vision and I'll Build Your Solution
-      </div>
-    </div>
-  </div>
   <div class="contact row">
     <div class="info col-md-4">
       <p class="title">
