--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@ background_text_line1: >
   Experiences, and Solving Problems
 background_text_line2: >
   Here is a peek into my life.
+body_title: I am
+body_description: >
+  a Father, Husband, Friend, and last but not least a Solutions Engineer.
 ---
 
 <div class="container-fluid">
-  <div class="row lead">
-    <div class="col-md-8 title">
-      I am
-      <div class="description">
-        a Father, Husband, Friend, and last but not least a Solutions Engineer.
-      </div>
-    </div>
-  </div>
   <div class="row">
     <div class="col-md-6">
       <p>
