--- a/portfolio.html
+++ b/portfolio.html
@@ -8,17 +8,12 @@ background_text_line1: >
 background_text_margin_top: 19%
 background_text_margin_left: 14%
 permalink: /portfolio/
+body_title: What I Do
+body_description: >
+  Building Dynamic, Responsive &amp; Clean Web and Mobile Applications
 ---
 
 <div class="container-fluid">
-  <div class="row lead">
-    <div class="col-md-8 title">
-      What I Do
-      <div class="description">
-        Building Dynamic, Responsive &amp; Clean Web and Mobile Applications
-      </div>
-    </div>
-  </div>
   <div class="row">
     <div class="col-md-8">
       <img src="{{ "/img/shuluit-monitor.png" |  prepend: site.baseurl }}" title="ShuluIt" class="col-md-12 col-xs-12" />
