--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,45 @@ background_text_line1: >
   This is my attempt to share what I learn.</br>
   I write you hopefully find it helpful it's Blogging
 permalink: /blog/
-body_title: Its a Blog
+body_title: It's a Blog
 body_description: >
   Here are some things I have learned through my life experiences as a Solutions Engineer.
 ---
+
+<div class="container-fluid">
+  <div class="row">
+    <!-- This loops through the paginated posts -->
+    {% for post in paginator.posts %}
+      <div class="row">
+        <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+        <p class="author">
+          <span class="date">{{ post.date }}</span>
+        </p>
+        <div class="content">
+          {{ post.content }}
+        </div>
+      </div>
+    {% endfor %}
+
+    <!-- Pagination links -->
+    <div class="containter">
+      <div class="row">
+        <nav>
+          <ul class="pager">
+            {% if paginator.previous_page %}
+              <li class="previous"><a href="{{ paginator.previous_page_path }}"><span aria-hidden="true">&larr;</span> Newer</a></li>
+            {% else %}
+              <li class="previous disabled"><a href="#" disabled><span aria-hidden="true">&larr;</span> Newer</a></li>
+            {% endif %}
+
+            {% if paginator.next_page %}
+              <li class="next"><a href="{{ paginator.next_page_path }}">Older <span aria-hidden="true">&rarr;</span></a></li>
+            {% else %}
+              <li class="next disabled"><a href="#">Older <span aria-hidden="true">&rarr;</span></a></li>
+            {% endif %}
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</div>
