--- a/blog.html
+++ b/blog.html
@@ -34,13 +34,13 @@ body_description: >
             {% if paginator.previous_page %}
               <li class="previous"><a href="{{ paginator.previous_page_path }}"><span aria-hidden="true">&larr;</span> Newer</a></li>
             {% else %}
-              <li class="previous disabled"><a href="#" disabled><span aria-hidden="true">&larr;</span> Newer</a></li>
+              <li class="previous disabled"><a href="#" class="disabled"><span aria-hidden="true">&larr;</span> Newer</a></li>
             {% endif %}
 
             {% if paginator.next_page %}
               <li class="next"><a href="{{ paginator.next_page_path }}">Older <span aria-hidden="true">&rarr;</span></a></li>
             {% else %}
-              <li class="next disabled"><a href="#">Older <span aria-hidden="true">&rarr;</span></a></li>
+              <li class="next disabled"><a href="#" class="disabled">Older <span aria-hidden="true">&rarr;</span></a></li>
             {% endif %}
           </ul>
         </nav>
