Clean up the look of the pager buttons

--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@ body_description: >
     <div class="containter">
       <div class="row">
         <nav>
-          <ul class="pager">
+          <ul class="pager col-xs-8 col-md-12">
             {% if paginator.previous_page %}
               <li class="previous"><a href="{{ paginator.previous_page_path }}"><span aria-hidden="true">&larr;</span> Newer</a></li>
             {% else %}
