Fix up the html it was missing a div tag on the blog.

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,8 @@ body_description: >
         </div>
       </div>
     {% endfor %}
-
+  </div>
+  <div class="row">
     <!-- Pagination links -->
     <div class="containter">
       <div class="row">
