--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: main
+permalink: /
 background_text_line1: >
   Life is all about the mixture of Family, Friends,<br/>
   Experiences, and Solving Problems
