Fix up the yaml

--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,14 @@
 layout: main
 title: Contact
 background: contact.jpg
-background_text_line1: >
+background_text_line1: |
   You have ideas and I would love to hear them.</br>
   Contact me and we can sit down to see what to do.
 background_text_margin_top: 25%
 background_text_margin_left: 20%
 permalink: /contact/
 body_title: Contact
-body_description: >
+body_description: |
   Tell Me Your Vision and I'll Build Your Solution
 ---
 
