--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: main
 permalink: /
-background_text_line1: >
+background_text_line1: |
   Life is all about the mixture of Family, Friends,<br/>
   Experiences, and Solving Problems
-background_text_line2: >
+background_text_line2: |
   Here is a peek into my life.
 body_title: I am
-body_description: >
+body_description: |
   a Father, Husband, Friend, and last but not least a Solutions Engineer.
 ---
 
