--- a/portfolio.html
+++ b/portfolio.html
@@ -2,14 +2,14 @@
 layout: main
 title: Portfolio
 background: work.jpg
-background_text_line1: >
+background_text_line1: |
   I love solving problems and building new things.<br>
   Here are some example of things I have created.
 background_text_margin_top: 19%
 background_text_margin_left: 14%
 permalink: /portfolio/
 body_title: What I Do
-body_description: >
+body_description: |
   Building Dynamic, Responsive &amp; Clean Web and Mobile Applications
 ---
 
