Add keywords and description for each page

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,9 @@
 ---
 layout: main
 title: Contact
+url: /contact
+keywords: contact, Dustin Kocher
+excerpt: Contact Dustin Kocher to let him be your Solutions Engineer.
 background: contact.jpg
 background_text_line1: |
   You have ideas and I would love to hear them.</br>
