--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,9 @@
 ---
 layout: main
 title: Portfolio
+url: /portfolio
+keywords: shuluit, dustin kocher, portfolio
+excerpt: I Build Dynamic, Responsive &amp; Clean Web and Mobile Applications.
 background: work.jpg
 background_text_line1: |
   I love solving problems and building new things.<br>
