--- a/portfolio.html
+++ b/portfolio.html
@@ -73,3 +73,46 @@ body_description: |
     </div>
   </div>
 </div>
+
+<div class="container" style="margin-top: 85px;">
+  <div class="row lead">
+    <div class="col-md-8 title">
+      <div class="description">
+        I also like when I can contribute to the Open Source Community
+      </div>
+    </div>
+  </div>
+  <div class="row">
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4">
+      <img src="{{ "/img/opensource.png" |  prepend: site.baseurl }}" title="Open Source" class="col-md-12 col-xs-12" />
+    </div>
+    <div class="container-fluid app col-md-8">
+      <div class="row logo">
+        Contributions
+      </div>
+      <div class="row">
+        <dl>
+          <dt>SportsDatabase</dt>
+          <dd>
+            A ruby client to help with interacting to <a href="http://www.sportsdatabase.com/api" target="_blank">http://www.sportsdatabase.com/api</a>.
+            JSONP is returned from the API and this gem will handle the calls made to the API as well as parsing the JSONP returned.
+            For examples on how to use this gem, make contributions, or for souce code examples view on github.
+          </dd>
+          <dd><a href="https://github.com/dtkocher/sports_database" class="btn btn-info" target="_blank">View on Github</a></dd>
+        </dl>
+        <dl>
+          <dt>HTMLreader</dt>
+          <dd>
+            A java lib that encapsulates the javax HTMLEditorKit and making it easy to call a web page and parse the desired information based on the Xpath.
+            To make contributions, use, or for souce code examples view on github.
+          </dd>
+          <dd><a href="https://github.com/dtkocher/htmlreader" class="btn btn-info" target="_blank">View on Github</a></dd>
+        </dl>
+      </div>
+    </div>
+  </div>
