--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ body_description: |
       <p>
         Who am I?  Well in my personal time I am a father, husband and friend.
         The thing I enjoy the most is being with my family. I have a little girl,
-        McKenzie, that is my whole life and a beautiful wife, Tiffany. I love doing
+        Mckenzie, that is my whole life and a beautiful wife, Tiffany. I love doing
         anything with them whether it be sitting at home on the couch watching a movie,
-        or going to the park pushing McKenzie on the swings and helping her down a slide.
+        or going to the park pushing Mckenzie on the swings and helping her down a slide.
         I also love doing anything dealing with sports. I love watching sports where I am
         an avid fan of college football and the Purdue Boilermakers in particular. I have
         also enjoyed coaching middle school football in the past.  Other than family and
