--- a/resume.html
+++ b/resume.html
@@ -10,19 +10,19 @@ permalink: /resume/
 <div id="cv" class="instaFade">
   <div class="mainDetails">
     <div id="headshot" class="quickFade">
-      <img src="headshot.jpg" alt="Alan Smith" />
+      <img src="/img/headshot.jpg" alt="Alan Smith" />
     </div>
 
     <div id="name">
-      <h1 class="quickFade delayTwo">Joe Bloggs</h1>
-      <h2 class="quickFade delayThree">Job Title</h2>
+      <h1 class="quickFade delayTwo">Dustin Kocher</h1>
+      <h2 class="quickFade delayThree">Software Engineer</h2>
     </div>
 
     <div id="contactDetails" class="quickFade delayFour">
       <ul>
-        <li>e: <a href="mailto:joe@bloggs.com" target="_blank">joe@bloggs.com</a></li>
-        <li>w: <a href="http://www.bloggs.com">www.bloggs.com</a></li>
-        <li>m: 01234567890</li>
+        <li>e: <a href="mailto:dtkocher@hotmail.com" target="_blank">dtkocher@hotmail.com</a></li>
+        <li>w: <a href="http://www.dustinkocher.com">www.dustinkocher.com</a></li>
+        <li>m: (859) 429-2947</li>
       </ul>
     </div>
     <div class="clear"></div>
@@ -36,7 +36,30 @@ permalink: /resume/
         </div>
 
         <div class="sectionContent">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+          <p>
+            Passionate about creating great software and a smooth user experience. I enjoy the process of
+            providing business and product experts, with the insight into the technology that can help them
+            accomplish their goals. Through an agile/iterative approach to software design and engineering, I
+            am enabled to get the quick and effective feedback to find out what they really want and to deliver
+            it.
+          </p>
+          <p style="margin-bottom: 5px;">
+            I have professional experience in web development using the following technologies:
+            <ul style="margin-left: 35px;">
+              <li>Ruby on Rails</li>
+              <li>Java - J2EE frameworks (Struts 1 and Struts 2)</li>
+              <li>Client Side - (AngularJS, JQuery, JQuery UI, and EXT JS)</li>
+              <li>Databases - (MySQL, Postgres, Microsoft SQL Server, and IBM DB2)</li>
+              <li>ORM's – (ActiveRecord and Hibernate)</li>
+            </ul>
+          </p>
+          <p style="margin-bottom: 5px;">
+            Additional Details and Code Samples:
+            <ul style="margin-left: 35px;">
+              <li><a href="http://www.dustinkocher.com">http://www.dustinkocher.com</a></li>
+              <li><a href="https://github.com/dtkocher">https://github.com/dtkocher</a></li>
+            </ul>
+          </p>
         </div>
       </article>
       <div class="clear"></div>
@@ -71,40 +94,28 @@ permalink: /resume/
 
     <section>
       <div class="sectionTitle">
-        <h1>Key Skills</h1>
-      </div>
-
-      <div class="sectionContent">
-        <ul class="keySkills">
-          <li>A Key Skill</li>
-          <li>A Key Skill</li>
-          <li>A Key Skill</li>
-          <li>A Key Skill</li>
-          <li>A Key Skill</li>
-          <li>A Key Skill</li>
-          <li>A Key Skill</li>
-          <li>A Key Skill</li>
-        </ul>
-      </div>
-      <div class="clear"></div>
-    </section>
-
-    <section>
-      <div class="sectionTitle">
         <h1>Education</h1>
       </div>
 
       <div class="sectionContent">
         <article>
-          <h2>College/University</h2>
-          <p class="subDetails">Qualification</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+          <h2>Northern Kentucky University</h2>
+          <p class="subDetails">BS in Computer Science (2004-2007)</p>
+          <ul>
+            <li>Magna Cum Laude honors</li>
+            <li>3.607 GPA</li>
+          </ul>
         </article>
 
         <article>
-          <h2>College/University</h2>
-          <p class="subDetails">Qualification</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+          <h2>ProTech’s .NET Programming with Visual Basics</h2>
+          <p class="subDetails">(March 10-14, 2008)</p>
+          <p>Was taught Visual Basic .NET, ASP.NET, and ADO.NET</p>
+        </article>
+
+        <article>
+          <h2>No Fluff Just Stuff Java Conference</h2>
+          <p class="subDetails">(June 25-27, 2010)</p>
         </article>
       </div>
       <div class="clear"></div>
