--- a/resume.html
+++ b/resume.html
@@ -72,21 +72,154 @@ permalink: /resume/
 
       <div class="sectionContent">
         <article>
-          <h2>Job Title at Company</h2>
-          <p class="subDetails">April 2011 - Present</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+          <h2>Senior Software Engineer at LendKey</h2>
+          <p class="subDetails">September 2014 - Present</p>
+          <h3>Job Description:</h3>
+          <p>
+            Develop new features and enhancements using Ruby on Rails, AngularJS, JQuery, and Bootstrap
+            for the LendKey loan origination system's internal, lender, and customer facing sites. Through the
+            customer facing site LendKey allows customers to apply for varying loans ranging from student
+            and consolidation all the way to home improvement loans. With the lender's and internal sites we
+            allow for the LendKey origination team and lender teams to view and make decisions based on
+            the pulled credit profile, LTV, DTI and loan amount.
+          </p>
+          <h3>Job Responsibilities:</h3>
+          <ul>
+            <li>Develop new back-end features and enhancements using the Ruby on Rails framework.</li>
+            <li>Develop new front-end features and enhancements using AngularJS, JQuery, and
+              Bootstrap.</li>
+            <li>Provide leadership and guidance to Junior level developers.</li>
+            <li>Help Product and Business representatives make educated and informed technical
+              decisions to meet their deliverables.</li>
+            <li>Code review my peers work to make sure it meets quality code standards.</li>
+          </ul>
+          <h3>Project of Note:</h3>
+          <p>
+            A lead developer on the LendKey Network application – This is a dynamic site which allows you
+            to shop for loans based on the information you provide and then apply for them. This is a two
+            part application with the front end being an AngularJSApplication and the backend being made of
+            a Ruby on Rails REST API. Taking a leadership role for this project I was able to hit
+            development completion on this massive project in only 2 months.
+          </p>
         </article>
 
         <article>
-          <h2>Job Title at Company</h2>
-          <p class="subDetails">Janruary 2007 - March 2011</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+          <h2>Application Developer at Scrip-Safe</h2>
+          <p class="subDetails">Janruary 2012 – August 2014</p>
+          <h3>Job Description:</h3>
+          <p>
+            Develop the Ruby on Rails dynamic web applications Transcripts on Demand and eSCRIP-SAFE.
+            The Transcripts on Demand dynamic web application is used by students (past and present) to
+            order transcripts either to be sent electronically to an in-network school or by paper to themselves
+            or another third party. eSCRIP-SAFE is used by a schools registration office to send and receive
+            transcripts electronically in a safe and secure manner.
+          </p>
+          <h3>Job Responsibilities:</h3>
+          <ul>
+            <li>Develop new back-end features and enhancements using the Ruby on Rails framework.</li>
+            <li>Develop new front-end features and enhancements using the JQuery and JQuery UI
+              javascript libraries.</li>
+            <li>Manage the Postgres databases with Ruby on Rails' ActiveRecord to create migrations
+              and manage interactions between the applications and the databases.</li>
+            <li>Helping to manage deployments via Capistrano.</li>
+          </ul>
+          <h3>Projects of Note:</h3>
+          <ul>
+           <li>Writing a Capistrano script to manage the deployment of Transcripts on Demand to all
+             the different QA, Staging, and Production environments.</li>
+           <li>Developing a web interface using Ruby on Rails that allows the Customer Support team
+             to set up clients in QA/Staging environments. In turn allowing full functional testing or
+             demos and then easily moving them into Production.</li>
+           <li>Working with a third party vendor to create a web-serve to integrate eSCRIP-SAFE with
+             their system via both a Restful API (on the Scrip-Safe side) and a SOAP API (on the
+             vendors side). The resulting product of this project was to have the ability for the third
+             party vendor's schools system to send us transcripts, for eSCRIP-SAFE to parse the
+             transcripts, to update the third party with data extracted from the transcripts, and then to
+             send the transcripts to the desired institution.</li>
+           <li>Creating a service which we called the Vault. This is a service that allows Scrip-Safe to
+             store all of the transcripts that are sent to them in a server agnostic format. The transcripts
+             can be stored on the server, in the cloud or anywhere else we need as a vault location.
+             This project was developed using Ruby on Rails back end and CarrierWave to store the
+             file either to Amazon S3 or to any local destination. Interaction with the Vault is done via
+             a Restful API.</li>
+          </ul>
         </article>
 
         <article>
-          <h2>Job Title at Company</h2>
-          <p class="subDetails">October 2004 - December 2006</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+          <h2>Senior Software Developer at Rippe & Kingston</h2>
+          <p class="subDetails">December 2010 – Janruary 2012</p>
+          <h3>Job Description:</h3>
+          <p>
+            Develop the J2EE dynamic web application LMS+. This dynamic web application is used by law
+            firms to track time entry and client needs for bill pay and accounting purposes. It contains many
+            reports, dashboards and data entry pages to help the law firm in making better and more precise
+            business decisions to both help the company and their clients.
+          </p>
+          <h3>Job Responsibilities:</h3>
+          <ul>
+            <li>Develop back-end features using the Struts framework and the Hibernate ORM for
+              interaction with their IBM DB2 database.</li>
+            <li>Develop front-end features using the ExtJS java-script UI library to help give LMS+ not
+              only a desktop feel but the look and professional appeal of a state of the art application.</li>
+            <li>Helping update and guide the direction of the LMS+'s framework - showing the benefits
+              of moving from Java 1.4 to Java 1.6 as well as moving from Tomcat 5.5 to Tomcat 7.</li>
+          </ul>
+          <h3>Project of Note:</h3>
+          <p>
+            I was assigned to come up with an automated testing platform to perform regression tests.
+            Through this I gained experience using both Canoo Web Test and Selenium. I designed a
+            framework around the basic Selenium scripting which allows tests to be written with less code.
+            This in turn helps the writing of test cases to not be so burdensome, especially when dealing with
+            the dynamic interfaces designed with ExtJS.
+          </p>
+        </article>
+
+        <article>
+          <h2>Software Engineer II at Cadence/Advantage IQ</h2>
+          <p class="subDetails">November 2006 – December 2010</p>
+          <h3>Job Description:</h3>
+          <p>
+            Develop/Enhance the J2EE dynamic web application Performance IQ. Performance IQ is used to
+            help Advantage IQ and it's customers save money on their utility bills by using its dynamic
+            reporting system to find discrepancies at the Account, Site, and/or even the Enterprise levels.
+          </p>
+          <h3>Job Responsibilities:</h3>
+          <ul>
+            <li>Working in conjunction with business representatives to create use cases and prototypes.</li>
+            <li>Develop back-end solutions for Performance IQ using Java and a homegrown J2EE solution.</li>
+            <li>Perform releases using ANT to compile the build and the open source web server Tomcat.</li>
+            <li>Enhancing the home grown reporting system, which is used behind scenes of
+              Performance IQ. This is built using Apache Cocoon, XML, XSLT, and SQL. The most
+              important feature of the reporting engine is the unique and dynamic Stored Procedures for
+              each report which are run on Microsoft SQL Server. The result sets for these Stored
+              Procedures are used to generate XML files which I then helped in creating XSLT style
+              sheets to generate both Excel and XHTML outputs for.</li>
+            <li>Sole ownership of maintaining and supporting the marketing Advantage IQ website,
+              http://www.advantageiq.com. This uses the Dot Net Nuke web content system which uses
+              the .NET framework. I was responsible for creating and updating modules and the site’s
+              navigation system per the marketing department’s specifications. I also updated the
+              website with Google tracking systems which track page hits and increase key word
+              visibility on Google searches.</li>
+          </ul>
+          <h3>Interim CO Team Lead Role:</h3>
+          <p class="subDetails">(In doing this I have performed the following duties)</p>
+          <ul>
+            <li>Writing release notes for the PIQ 8.4 release.</li>
+            <li>Schedule and meet with business resources to determine what is desired and needed in
+              the upcoming release of PIQ 8.5.</li>
+            <li>Taking the requirements and creating an overall scope and a project plan to determine the
+              man hours and effort hours required.</li>
+            <li>Creating and gathering requirements and details for the integration of Advantage IQ’s BI
+              tool into PIQ.</li>
+          </ul>
+          <h3>Project of Note:</h3>
+          <p>
+            I was part of a team that created the J2EE dynamic web application from scratch called EPayables,
+            using the open source java web server JBOSS. The purpose of this project was to design
+            a web interface that talked to a Microsoft SQL Server database allowing the Accounts Payable
+            team to automate the bill paying process for customer’s utility bills generating money for
+            Advantage IQ through float and credit card kickbacks.
+          </p>
         </article>
       </div>
       <div class="clear"></div>
