Add print button and clean up color.

--- a/resume.html
+++ b/resume.html
@@ -255,3 +255,5 @@ permalink: /resume/
     </section>
   </div>
 </div>
+
+<input type="button" value="Print" class="small btn btn-primary printbutton" onClick="window.print()"/>
