--- a/resume.html
+++ b/resume.html
@@ -97,7 +97,7 @@ permalink: /resume/
           <p>
             A lead developer on the LendKey Network application – This is a dynamic site which allows you
             to shop for loans based on the information you provide and then apply for them. This is a two
-            part application with the front end being an AngularJSApplication and the backend being made of
+            part application with the front end being an AngularJS Application and the backend being made of
             a Ruby on Rails REST API. Taking a leadership role for this project I was able to hit
             development completion on this massive project in only 2 months.
           </p>
@@ -130,7 +130,7 @@ permalink: /resume/
            <li>Developing a web interface using Ruby on Rails that allows the Customer Support team
              to set up clients in QA/Staging environments. In turn allowing full functional testing or
              demos and then easily moving them into Production.</li>
-           <li>Working with a third party vendor to create a web-serve to integrate eSCRIP-SAFE with
+           <li>Working with a third party vendor to create a web-service to integrate eSCRIP-SAFE with
              their system via both a Restful API (on the Scrip-Safe side) and a SOAP API (on the
              vendors side). The resulting product of this project was to have the ability for the third
              party vendor's schools system to send us transcripts, for eSCRIP-SAFE to parse the
@@ -216,7 +216,7 @@ permalink: /resume/
           <p>
             I was part of a team that created the J2EE dynamic web application from scratch called EPayables,
             using the open source java web server JBOSS. The purpose of this project was to design
-            a web interface that talked to a Microsoft SQL Server database allowing the Accounts Payable
+            a web interface that talked to a Microsoft SQL Server database, allowing the Accounts Payable
             team to automate the bill paying process for customer’s utility bills generating money for
             Advantage IQ through float and credit card kickbacks.
           </p>
