--- a/resume.html
+++ b/resume.html
@@ -47,6 +47,7 @@ permalink: /resume/
             I have professional experience in web development using the following technologies:
             <ul style="margin-left: 35px;">
               <li>Ruby on Rails</li>
+              <li>C# - .NET Web API</li>
               <li>Java - J2EE frameworks (Struts 1 and Struts 2)</li>
               <li>Client Side - (AngularJS, JQuery, JQuery UI, and EXT JS)</li>
               <li>Databases - (MySQL, Postgres, Microsoft SQL Server, and IBM DB2)</li>
@@ -72,8 +73,26 @@ permalink: /resume/
 
       <div class="sectionContent">
         <article>
+          <h2>Senior Software Engineer Consultant at Callibrity Solutions</h2>
+          <p class="subDetails">August 2015 - Present</p>
+          <h3>Job Description and Responsibilities:</h3>
+          <p>
+            Provide clients with software engineer expertise to help them acheive their end goals. It is
+            my responsiblity to provide accurate analysis on the best approach, best practices, and solutions to
+            figure out what is needed and how to get there. I am responsible in talking to product owners, business
+            representatives, writing software, automated testing, and code reviews.
+          </p>
+          <h3>Projects:</h3>
+          <ul>
+            <li>Crossroads Church - Creating a custom web application using AngularJS and .NET Web API that
+              integrates with an off the shelf products ranging from Ministry Platform to a check scanning tool
+              called EZscan.
+          </ul>
+        </article>
+
+        <article>
           <h2>Senior Software Engineer at LendKey</h2>
-          <p class="subDetails">September 2014 - Present</p>
+          <p class="subDetails">September 2014 - July 2015</p>
           <h3>Job Description:</h3>
           <p>
             Develop new features and enhancements using Ruby on Rails, AngularJS, JQuery, and Bootstrap
