--- a/resume.html
+++ b/resume.html
@@ -85,8 +85,8 @@ permalink: /resume/
           <h3>Projects:</h3>
           <ul>
             <li>Crossroads Church - Creating a custom web application using AngularJS and .NET Web API that
-              integrates with an off the shelf products ranging from Ministry Platform to a check scanning tool
-              called EZscan.
+              integrates with off the shelf products ranging from Ministry Platform to a check scanning tool
+              called EZ scan.
           </ul>
         </article>
 
