Update ruby and other gems.  Update pictures and contributions.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ permalink: /
 background_text_line1: |
   Life is all about the mixture of Family, Friends,<br/>
   Experiences, and Solving Problems
-background_text_line2: |
-  Here is a peek into my life.
+background_text_margin_top: 58%
+background_text_margin_left: 32%
 body_title: I am
 body_description: |
   a Father, Husband, Friend, and last but not least a Solutions Engineer.
