--- a/portfolio.html
+++ b/portfolio.html
@@ -97,6 +97,15 @@ body_description: |
       </div>
       <div class="row">
         <dl>
+          <dt>Crossroads</dt>
+          <dd>
+            This is project contains two applications the AngularJS client facing front end for
+            <a href="http://www.crossroads.net/" target="_blank">Crossroads</a> and
+            the C# .NET web service that serves as a gateway to the back end database.
+          </dd>
+          <dd><a href="https://github.com/crdschurch/crds-angular" class="btn btn-info" target="_blank">View on Github</a></dd>
+        </dl>
+        <dl>
           <dt>SportsDatabase</dt>
           <dd>
             A ruby client to help with interacting to <a href="http://www.sportsdatabase.com/api" target="_blank">http://www.sportsdatabase.com/api</a>.
