--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ body_description: |
       </p>
     </div>
     <div class="col-md-5">
-      <img src="{{ "/img/family2.jpg" |  prepend: site.baseurl }}" title="My life" class="thumbnail col-md-12 col-xs-12" />
+      <img src="{{ "/img/family2.jpg" |  prepend: site.baseurl }}" alt="My life" title="My life" class="thumbnail col-md-12 col-xs-12" />
     </div>
   </div>
   <div class="row">
     <div class="col-md-5">
-      <img src="{{ "/img/family3.jpg" |  prepend: site.baseurl }}" title="My life" class="thumbnail col-md-12 col-xs-12" />
+      <img src="{{ "/img/family3.jpg" |  prepend: site.baseurl }}" alt="My life" title="My life" class="thumbnail col-md-12 col-xs-12" />
     </div>
     <div class="col-md-6">
       <p>
